Closed
Bug 381846
Opened 18 years ago
Closed 17 years ago
Selecting a bookmark or new window from the dock menu does not bring application to the front
Categories
(Camino Graveyard :: Bookmarks, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: lensovetp, Assigned: bugzilla-graveyard)
References
Details
Attachments
(1 file, 3 obsolete files)
|
2.04 KB,
patch
|
stuart.morgan+bugzilla
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.1) Gecko/20061010 Firefox/2.0
Build Identifier:
Selecting a bookmark from the dock menu does not bring Camino to the front, even though it really should.
Reproducible: Always
| Reporter | ||
Comment 1•18 years ago
|
||
This doesn't apply to the "New window" menu item, however.
Attachment #265922 -
Flags: review?
| Reporter | ||
Comment 2•18 years ago
|
||
This patch also fixes the "New Window" menu item. We might also want to check who the sender if first before doing the app activation.
Attachment #265922 -
Attachment is obsolete: true
Attachment #265924 -
Flags: review?
Attachment #265922 -
Flags: review?
| Assignee | ||
Comment 3•18 years ago
|
||
Confirming per the status meeting.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
| Assignee | ||
Updated•18 years ago
|
Assignee: nobody → lensovetp
Status: ASSIGNED → NEW
| Reporter | ||
Comment 4•18 years ago
|
||
can the patch get a little love?
the only thing to think about here is whether there are any instances in which we would be opening pages or bookmarks and NOT want Camino to come to the front. Do such situations even exist?
Status: NEW → ASSIGNED
| Reporter | ||
Updated•18 years ago
|
Attachment #265924 -
Flags: review? → review?(cl-bugs)
| Assignee | ||
Comment 5•18 years ago
|
||
Comment on attachment 265924 [details] [diff] [review]
Revised version, also fixes the "New Window" menu item
r=me on the code, but I haven't had a chance to test it yet. In regards to comment 4, I don't think we were able to come up with any situations where we wouldn't want to activate.
Attachment #265924 -
Flags: review?(cl-bugs) → review+
Comment on attachment 265924 [details] [diff] [review]
Revised version, also fixes the "New Window" menu item
r=ardissone since it works as expected in my tests.
However, in the future please use cvs diff -u8N from either /mozilla/camino (preferred) or /mozilla when making diffs (patch had a little issue with the lack of context and lack of newline in this patch).
Attachment #265924 -
Flags: superreview?(stuart.morgan)
Attachment #265924 -
Flags: review+
Comment 7•18 years ago
|
||
Comment on attachment 265924 [details] [diff] [review]
Revised version, also fixes the "New Window" menu item
AppleScript will be able to interact with bookmarks in the near future (and in general I don't think we should fix a very specific problem at such a general location, since it invites regressions either now or later). Activating the app should be as specific to the Dock menu as possible.
Attachment #265924 -
Flags: superreview?(stuart.morgan) → superreview-
Updated•17 years ago
|
Summary: Selecting a bookmark from the dock menu does not bring application to the front → Selecting a bookmark or new window from the dock menu does not bring application to the front
| Assignee | ||
Comment 9•17 years ago
|
||
Paul, hope you don't mind...I've got a patch that addresses Stuart's issue with this. I'll post it shortly.
Assignee: lensovetp → cl-bugs-new
Hardware: Macintosh → All
| Assignee | ||
Comment 10•17 years ago
|
||
Only applies to actions coming in via the Dock menu. Presumably this doesn't need another round of review and can go straight to sr.
Attachment #265924 -
Attachment is obsolete: true
Attachment #342179 -
Flags: superreview?(stuart.morgan+bugzilla)
Comment on attachment 342179 [details] [diff] [review]
fix v1.1
r- since this causes us to fail to produce a browser window with a new profile, as discussed on irc.
Camino[48163]: *** -[MainController menu]: unrecognized selector sent to instance 0x942f50
Camino[48163]: Exception raised during posting of notification. Ignored. exception: '*** -[MainController menu]: unrecognized selector sent to instance 0x942f50' invoked observer method: '*** -[MainController applicationDidFinishLaunching:]' observer: 0x942f50 notification name: 'NSApplicationDidFinishLaunchingNotification'
Attachment #342179 -
Flags: superreview?(stuart.morgan+bugzilla) → review-
| Assignee | ||
Comment 12•17 years ago
|
||
Whoops. Make sure we have an id that's actually of the proper class before we go sending it |menu| messages it might not respond to.
Attachment #342179 -
Attachment is obsolete: true
Attachment #342184 -
Flags: superreview?(stuart.morgan+bugzilla)
Comment 13•17 years ago
|
||
Comment on attachment 342184 [details] [diff] [review]
fix v1.11
sr=smorgan
Attachment #342184 -
Flags: superreview?(stuart.morgan+bugzilla) → superreview+
Landed on cvs trunk.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Comment 15•17 years ago
|
||
It works on latest nightly 2.0 M1.9 dated 25-Oct-2008.
Thank you very much.
You need to log in
before you can comment on or make changes to this bug.
Description
•