Bug 381846 - Selecting a bookmark or new window from the dock menu does not bring application to the front. Patch by Chris Lawson <cl-bugs-new@chrislawson.net>, r/sr=smorgan